--- a/usbsas-analyzer-server/Cargo.toml
+++ b/usbsas-analyzer-server/Cargo.toml
@@ -14,7 +14,7 @@ log = "0.4.17"
 serde = { version = "1.0.137", features = ["derive"] }
 serde_json = "1.0.81"
 tar = "0.4.38"
-tempdir = "0.3.7"
+tempfile = "3.3.0"
 uuid = { version = "1.1.1", features = ["v4"] }
 
 # cargo-deb
