--- a/usbsas-server/Cargo.toml
+++ b/usbsas-server/Cargo.toml
@@ -8,6 +8,7 @@ license = "GPL-3.0"
 actix-files = "0.6.0"
 actix-web = "4.0.1"
 base64 = "0.13.0"
+clap = "3.1.18"
 err-derive = "0.3.1"
 futures = "0.3.21"
 hmac = { version = "0.12.1", features = ["reset"] }
