Don't build analyzer-server, hid and extra tools by default

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,32 @@ members = [
   "usbsas-hid",
   "usbsas-tools"
 ]
+default-members = [
+  "ff",
+  "ntfs3g",
+  "usbsas-utils",
+  "usbsas-comm",
+  "usbsas-proto",
+  "usbsas-process",
+  "usbsas-privileges",
+  "usbsas-scsi",
+  "usbsas-mass-storage",
+  "usbsas-fsrw",
+  "usbsas-config",
+  "usbsas-cmdexec",
+  "usbsas-dev2scsi",
+  "usbsas-files2fs",
+  "usbsas-files2tar",
+  "usbsas-filter",
+  "usbsas-fs2dev",
+  "usbsas-identificator",
+  "usbsas-scsi2files",
+  "usbsas-tar2files",
+  "usbsas-net",
+  "usbsas-usbdev",
+  "usbsas-usbsas",
+  "usbsas-server"
+]
 
 [profile.release]
 overflow-checks = true
