--- a/client/nwjs/package.json
+++ b/client/nwjs/package.json
@@ -4,8 +4,6 @@
     "node-main": "node-main.js",
     "chromium-args" : "--disable-accelerated-video  --disable-pinch --enable-logging=stderr",
     "window": {
-        "name": "usbsas",
-        "width": 1900,
-        "height": 1080
+        "name": "usbsas"
     }
 }
