--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,8 @@ members = [
   "usbsas-usbdev",
   "usbsas-usbsas",
   "usbsas-server",
-  "usbsas-hid",
+  "usbsas-hid/hid-user",
+  "usbsas-hid/hid-dealer",
   "usbsas-tools"
 ]
 default-members = [
