--- a/usbsas-tools/Cargo.toml
+++ b/usbsas-tools/Cargo.toml
@@ -7,7 +7,7 @@ license = "GPL-3.0"
 [dependencies]
 clap = "3.2.10"
 env_logger = "0.9.0"
-fuse_mt = { git = "https://github.com/wfraser/fuse-mt", rev = "1876f8200c5c391be28da74cab8de27198809be4", optional = true }
+fuse_mt = { version = "0.6.0", optional = true }
 indicatif = { version = "0.16.2", optional = true }
 libc = { version = "0.2.126", optional = true }
 log = "0.4.17"
