--- a/usbsas-server/Cargo.toml
+++ b/usbsas-server/Cargo.toml
@@ -3,6 +3,7 @@ name = "usbsas-server"
 version = "0.1.0"
 edition = "2021"
 license = "GPL-3.0"
+description = "usbsas web server"
 
 [dependencies]
 actix-files = "0.6.1"
