--- a/usbsas-mass-storage/Cargo.toml
+++ b/usbsas-mass-storage/Cargo.toml
@@ -8,6 +8,7 @@ license = "GPL-3.0"
 log = "0.4.17"
 lru = "0.7.7"
 positioned-io = "0.2.2"
+positioned-io2 = "0.3.4"
 rusb = "0.9.1"
 usbsas-comm = { path = "../usbsas-comm" }
 usbsas-proto = { path = "../usbsas-proto" }
