Fix dependencies after prost-build bump

--- a/.github/workflows/build_check_test.yml
+++ b/.github/workflows/build_check_test.yml
@@ -26,6 +26,7 @@ jobs:
         clang \
         cmake \
         git \
+        protobuf-compiler \
         libfuse3-dev \
         libssl-dev \
         libkrb5-dev \
@@ -62,6 +63,7 @@ jobs:
         clang \
         cmake \
         git \
+        protobuf-compiler \
         libfuse3-dev \
         libssl-dev \
         libkrb5-dev \
@@ -126,6 +128,7 @@ jobs:
           clang \
           cmake \
           git \
+          protobuf-compiler \
           libfuse3-dev \
           libssl-dev \
           libkrb5-dev \
