Single tar format (with infos.json and files in data/)

--- a/usbsas-files2tar/Cargo.toml
+++ b/usbsas-files2tar/Cargo.toml
@@ -17,3 +17,4 @@ usbsas-comm = { path = "../usbsas-comm" }
 usbsas-privileges = { path = "../usbsas-privileges" }
 usbsas-process = { path = "../usbsas-process" }
 usbsas-proto = { path = "../usbsas-proto" }
+usbsas-utils = { path = "../usbsas-utils" }
