--- a/usbsas-tools/Cargo.toml
+++ b/usbsas-tools/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 license = "GPL-3.0"
 
 [dependencies]
+bitvec = { version = "1.0.1", optional = true }
 clap = "4.0.10"
 env_logger = "0.9.1"
 fuse_mt = { version = "0.6.0", optional = true }
@@ -17,6 +18,7 @@ time = { version = "0.3.15", optional = true }
 usbsas-comm = { path = "../usbsas-comm" }
 usbsas-config = { path = "../usbsas-config", optional = true }
 usbsas-dev2scsi = { path = "../usbsas-dev2scsi", optional = true }
+usbsas-fs2dev = { path = "../usbsas-fs2dev", optional = true }
 usbsas-net = { path = "../usbsas-net", optional = true }
 usbsas-privileges = { path = "../usbsas-privileges" }
 usbsas-process = { path = "../usbsas-process" }
@@ -28,9 +30,10 @@ users = { version = "0.11.0", optional = true }
 
 [features]
 imager = ["indicatif", "tempfile", "usbsas-config", "usbsas-dev2scsi", "usbsas-usbdev", "usbsas-utils"]
+fswriter = ["bitvec", "usbsas-fs2dev"]
 fuse-mount = ["fuse_mt", "libc", "time", "usbsas-scsi2files", "users"]
 uploader = ["usbsas-net"]
-default = ["imager", "fuse-mount", "uploader"]
+default = ["imager", "fswriter", "fuse-mount", "uploader"]
 
 [[bin]]
 name = "usbsas-imager"
@@ -47,6 +50,11 @@ name = "usbsas-fuse-mount"
 path = "src/fuse-mount.rs"
 required-features = ["fuse-mount"]
 
+[[bin]]
+name = "usbsas-fswriter"
+path = "src/fswriter.rs"
+required-features = ["fswriter"]
+
 # cargo-deb
 [package.metadata.deb]
 maintainer = "usbsas"
@@ -59,4 +67,5 @@ assets = [
   ["target/release/usbsas-fuse-mount", "usr/bin/", "755"],
   ["target/release/usbsas-imager", "usr/bin/", "755"],
   ["target/release/usbsas-uploader", "usr/bin/", "755"],
+  ["target/release/usbsas-fswriter", "usr/bin/", "755"],
 ]
