--- a/usbsas-analyzer-server/Cargo.toml
+++ b/usbsas-analyzer-server/Cargo.toml
@@ -7,7 +7,7 @@ license = "GPL-3.0"
 
 [dependencies]
 actix-web = "4.2.1"
-clamav-rs = "0.5.5"
+clamav-rs = { git = "https://github.com/losynix/clamav-rs", branch = "c_char_i8" }
 env_logger = "0.9.3"
 futures = "0.3.25"
 log = "0.4.17"
