--- a/usbsas-server/test_data/config_test.toml
+++ b/usbsas-server/test_data/config_test.toml
@@ -1,6 +1,6 @@
 out_directory = "/tmp/"
 
-[network]
+[[networks]]
 description = "Network"
 longdescr = "Send files on a remote server"
 url = "http://127.0.0.1:8042/api/uploadbundle"
