--- a/usbsas-analyzer-server/Cargo.toml
+++ b/usbsas-analyzer-server/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 license = "GPL-3.0"
 
 [dependencies]
+actix-files = "0.6.2"
 actix-web = "4.2"
 clamav-rs = { git = "https://github.com/losynix/clamav-rs", branch = "c_char_i8" }
 env_logger = "0.10"
