Rename usbsas-privileges -> usbsas-sandbox

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ members = [
   "usbsas-comm",
   "usbsas-proto",
   "usbsas-process",
-  "usbsas-privileges",
+  "usbsas-sandbox",
   "usbsas-scsi",
   "usbsas-mass-storage",
   "usbsas-fsrw",
@@ -37,7 +37,7 @@ default-members = [
   "usbsas-comm",
   "usbsas-proto",
   "usbsas-process",
-  "usbsas-privileges",
+  "usbsas-sandbox",
   "usbsas-scsi",
   "usbsas-mass-storage",
   "usbsas-fsrw",
