--- a/usbsas-files2fs/Cargo.toml
+++ b/usbsas-files2fs/Cargo.toml
@@ -13,7 +13,7 @@ thiserror = "1.0"
 usbsas-comm = { path = "../usbsas-comm" }
 usbsas-fsrw = { path = "../usbsas-fsrw" }
 usbsas-mbr = { path = "../usbsas-mbr" }
-usbsas-privileges = { path = "../usbsas-privileges" }
+usbsas-sandbox = { path = "../usbsas-sandbox" }
 usbsas-process = { path = "../usbsas-process" }
 usbsas-proto = { path = "../usbsas-proto" }
 usbsas-utils = { path = "../usbsas-utils" }
