--- a/usbsas-filter/Cargo.toml
+++ b/usbsas-filter/Cargo.toml
@@ -14,6 +14,6 @@ log = "0.4"
 thiserror = "1.0"
 usbsas-comm = { path = "../usbsas-comm" }
 usbsas-config = { path = "../usbsas-config" }
-usbsas-privileges = { path = "../usbsas-privileges" }
+usbsas-sandbox = { path = "../usbsas-sandbox" }
 usbsas-process = { path = "../usbsas-process" }
 usbsas-proto = { path = "../usbsas-proto" }
