--- a/usbsas-tar2files/Cargo.toml
+++ b/usbsas-tar2files/Cargo.toml
@@ -11,7 +11,7 @@ log = "0.4"
 tar = "0.4"
 thiserror = "1.0"
 usbsas-comm = { path = "../usbsas-comm" }
-usbsas-privileges = { path = "../usbsas-privileges" }
+usbsas-sandbox = { path = "../usbsas-sandbox" }
 usbsas-process = { path = "../usbsas-process" }
 usbsas-proto = { path = "../usbsas-proto" }
 usbsas-utils = { path = "../usbsas-utils" }
