Refactor process spawning

--- a/usbsas-dev2scsi/Cargo.toml
+++ b/usbsas-dev2scsi/Cargo.toml
@@ -15,8 +15,8 @@ usbsas-comm = { path = "../usbsas-comm" }
 usbsas-mass-storage = { path = "../usbsas-mass-storage" }
 usbsas-mock = { path = "../usbsas-mock", optional = true }
 usbsas-sandbox = { path = "../usbsas-sandbox" }
-usbsas-process = { path = "../usbsas-process" }
 usbsas-proto = { path = "../usbsas-proto" }
+usbsas-utils = { path = "../usbsas-utils" }
 
 [features]
 mock = ["usbsas-mock"]
