--- a/usbsas-cmdexec/Cargo.toml
+++ b/usbsas-cmdexec/Cargo.toml
@@ -10,5 +10,5 @@ log = "0.4"
 thiserror = "1.0"
 usbsas-comm = { path = "../usbsas-comm" }
 usbsas-config = { path = "../usbsas-config" }
-usbsas-process = { path = "../usbsas-process" }
 usbsas-proto = { path = "../usbsas-proto" }
+usbsas-utils = { path = "../usbsas-utils" }
