--- a/usbsas-filter/Cargo.toml
+++ b/usbsas-filter/Cargo.toml
@@ -15,5 +15,5 @@ thiserror = "1.0"
 usbsas-comm = { path = "../usbsas-comm" }
 usbsas-config = { path = "../usbsas-config" }
 usbsas-sandbox = { path = "../usbsas-sandbox" }
-usbsas-process = { path = "../usbsas-process" }
 usbsas-proto = { path = "../usbsas-proto" }
+usbsas-utils = { path = "../usbsas-utils" }
