--- a/usbsas-usbdev/Cargo.toml
+++ b/usbsas-usbdev/Cargo.toml
@@ -13,8 +13,8 @@ usbsas-comm = { path = "../usbsas-comm" }
 usbsas-config = { path = "../usbsas-config" }
 usbsas-mock = { path = "../usbsas-mock", optional = true }
 usbsas-sandbox = { path = "../usbsas-sandbox" }
-usbsas-process = { path = "../usbsas-process" }
 usbsas-proto = { path = "../usbsas-proto" }
+usbsas-utils = { path = "../usbsas-utils" }
 
 [features]
 mock = ["usbsas-mock"]
