Improve sandboxing with landlock

--- a/usbsas-net/Cargo.toml
+++ b/usbsas-net/Cargo.toml
@@ -15,6 +15,7 @@ thiserror = "1.0"
 usbsas-comm = { path = "../usbsas-comm" }
 usbsas-config = { path = "../usbsas-config" }
 usbsas-proto = { path = "../usbsas-proto" }
+usbsas-sandbox = { path = "../usbsas-sandbox" }
 usbsas-utils = { path = "../usbsas-utils" }
 
 [features]
