--- a/usbsas-mass-storage/Cargo.toml
+++ b/usbsas-mass-storage/Cargo.toml
@@ -9,6 +9,7 @@ log = "0.4"
 lru = "0.9"
 positioned-io2 = "0.3"
 rusb = "0.9"
+thiserror = "1.0"
 usbsas-comm = { path = "../usbsas-comm" }
 usbsas-proto = { path = "../usbsas-proto" }
 usbsas-scsi = { path = "../usbsas-scsi" }
