Use rusb's vendored libusb
because debian's version doesn't support disabling device discovery yet

--- a/usbsas-hid/hid-user/Cargo.toml
+++ b/usbsas-hid/hid-user/Cargo.toml
@@ -9,5 +9,5 @@ license = "GPL-3.0"
 bitfield = "0.14"
 env_logger = "0.10"
 log = "0.4"
-rusb = { git = "https://github.com/losynix/rusb", branch = "disable_device_discovery" }
+rusb = { git = "https://github.com/losynix/rusb", branch = "disable_device_discovery", features = ["vendored"] }
 x11 = "2.21"
