Write a transfer report on the destination device

--- a/usbsas-usbsas/Cargo.toml
+++ b/usbsas-usbsas/Cargo.toml
@@ -7,6 +7,7 @@ license = "GPL-3.0"
 [dependencies]
 clap = "4.1"
 log = "0.4"
+serde_json = "1.0"
 thiserror = "1.0"
 usbsas-comm = { path = "../usbsas-comm" }
 usbsas-mass-storage = { path = "../usbsas-mass-storage" }
