--- a/usbsas-net/Cargo.toml
+++ b/usbsas-net/Cargo.toml
@@ -11,6 +11,7 @@ libgssapi = { version = "0.6", optional = true }
 log = "0.4"
 reqwest = { version = "0.11", features = ["blocking", "json", "gzip"] }
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 thiserror = "1.0"
 usbsas-comm = { path = "../usbsas-comm" }
 usbsas-config = { path = "../usbsas-config" }
