--- a/usbsas-tools/Cargo.toml
+++ b/usbsas-tools/Cargo.toml
@@ -13,6 +13,7 @@ indicatif = { version = "0.17", optional = true }
 libc = { version = "0.2", optional = true }
 log = "0.4"
 tempfile = { version = "3.4", optional = true }
+serde_json = { version = "1.0", optional = true}
 thiserror = "1.0"
 time = { version = "0.3", optional = true }
 usbsas-comm = { path = "../usbsas-comm" }
@@ -27,7 +28,7 @@ users = { version = "0.11", optional = true }
 imager = ["indicatif", "tempfile", "usbsas-config", "usbsas-utils"]
 fswriter = ["bitvec"]
 fuse-mount = ["fuse_mt", "libc", "time", "users"]
-net = []
+net = ["serde_json"]
 default = ["imager", "fswriter", "fuse-mount", "net"]
 
 [[bin]]
