--- a/usbsas-server/test_data/config_test.toml
+++ b/usbsas-server/test_data/config_test.toml
@@ -13,6 +13,7 @@ url = "http://127.0.0.1:8042/api/downloadbundle"
 [analyzer]
 url = "http://127.0.0.1:8042/api/scanbundle"
 referer = "http://127.0.0.1"
+write_report = true
 
 [[filters]]
 contain = ["__macosx"]
