--- a/usbsas-utils/Cargo.toml
+++ b/usbsas-utils/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.1"
 edition = "2021"
 license = "GPL-3.0"
 
+[build-dependencies]
+toml = "0.7"
+
 [dependencies]
 clap = "4.1"
 env_logger = "0.10"
