--- a/usbsas-server/Cargo.toml
+++ b/usbsas-server/Cargo.toml
@@ -30,14 +30,14 @@ usbsas-config = { path = "../usbsas-config" }
 usbsas-process = { path = "../usbsas-process" }
 usbsas-proto = { path = "../usbsas-proto" }
 usbsas-utils = { path = "../usbsas-utils" }
-uuid = { version = "1.3", features = ["v4"], optional = true }
+uuid = { version = "1.3", features = ["v4"] }
 
 [dev-dependencies]
 assert_cmd = "2.0"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 
 [features]
-log-json = ["usbsas-utils/log-json", "uuid"]
+integration-tests = []
 
 # cargo-deb
 [package.metadata.deb]
