--- a/.github/workflows/build_check_test.yml
+++ b/.github/workflows/build_check_test.yml
@@ -10,137 +10,49 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-
-  build-and-test:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - uses: actions-rs/toolchain@v1
-      with:
-        toolchain: stable
-    - name: Install dependencies
-      run: |
-        sudo apt update && \
-        sudo apt install -y --no-install-recommends \
-        pkgconf \
-        clang \
-        cmake \
-        git \
-        protobuf-compiler \
-        libfuse3-dev \
-        libssl-dev \
-        libkrb5-dev \
-        libclamav-dev \
-        libx11-dev \
-        libxtst-dev \
-        libdbus-1-dev \
-        libudev-dev \
-        libseccomp-dev
-    # Build
-    - name: Build
-      uses: actions-rs/cargo@v1
-      with:
-        command: build
-        args: --release --all --verbose
-    # Run the tests
-    - name: Tests
-      uses: actions-rs/cargo@v1
-      with:
-        command: test
-        args: --release --all --verbose --exclude usbsas-server
-
-  integration-tests:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - uses: actions-rs/toolchain@v1
-      with:
-        toolchain: stable
-    - name: Install dependencies
-      run: |
-        sudo apt update && \
-        sudo apt install -y --no-install-recommends \
-        pkgconf \
-        clang \
-        cmake \
-        git \
-        protobuf-compiler \
-        libfuse3-dev \
-        libssl-dev \
-        libkrb5-dev \
-        libclamav-dev \
-        libx11-dev \
-        libxtst-dev \
-        libdbus-1-dev \
-        libudev-dev \
-        libseccomp-dev \
-        clamav-freshclam; \
-        systemctl is-active --quiet clamav-freshclam && \
-        sudo systemctl stop clamav-freshclam;  \
-        sudo freshclam \
-    # Build with mock feature for the integration tests
-    - name: Build with mock feature
-      uses: actions-rs/cargo@v1
-      with:
-        command: build
-        args: --release --all --verbose --features mock,integration-tests
-    # Run the integration tests
-    - name: Integration tests with mock feature
-      uses: actions-rs/cargo@v1
-      with:
-        command: test
-        args: --release --verbose -p usbsas-server --features integration-tests
-
-  # cargo fmt
-  fmt:
+  test-and-checks:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-          components: rustfmt
-      - name: Check format
-        run: cargo fmt --all -- --check
-
-  # cargo audit
-  audit:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Security audit
-        uses: actions-rs/audit-check@v1
-        with:
-         token: ${{ secrets.GITHUB_TOKEN }}
-
-  # cargo clippy
-  clippy:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          components: clippy
-      - name: Install dependencies
+      - name: build docker image
         run: |
-          sudo apt update && \
-          sudo apt install -y --no-install-recommends \
-          pkgconf \
-          clang \
-          cmake \
-          git \
-          protobuf-compiler \
-          libfuse3-dev \
-          libssl-dev \
-          libkrb5-dev \
-          libclamav-dev \
-          libx11-dev \
-          libxtst-dev \
-          libdbus-1-dev \
-          libudev-dev \
-          libseccomp-dev
-      - uses: actions-rs/cargo@v1
-        with:
-          command: clippy
-          args: --all -- -D warnings
+          cd debian && \
+          docker build -t usbsas-builder:debian -f Dockerfile .
+      - name: cargo fmt
+        run: |
+          docker run -t -u $(id -u):$(id -g) -v $(pwd)/:/SRC  \
+          --env CARGO_HOME=/SRC/target/.cargo usbsas-builder:debian \
+          cargo fmt
+      - name: cargo clippy
+        run: |
+          docker run -t -u $(id -u):$(id -g) -v $(pwd)/:/SRC  \
+          --env CARGO_HOME=/SRC/target/.cargo usbsas-builder:debian \
+          cargo clippy
+      - name: cargo audit
+        run: |
+          docker run -t -u $(id -u):$(id -g) -v $(pwd)/:/SRC  \
+          --env CARGO_HOME=/SRC/target/.cargo usbsas-builder:debian \
+          cargo audit
+      - name: build usbsas
+        run: |
+          docker run -t -u $(id -u):$(id -g) -v $(pwd)/:/SRC  \
+          --env CARGO_HOME=/SRC/target/.cargo usbsas-builder:debian \
+          cargo build --release --all --verbose
+      - name: tests
+        run: |
+          docker run -t -u $(id -u):$(id -g) -v $(pwd)/:/SRC  \
+          --env CARGO_HOME=/SRC/target/.cargo usbsas-builder:debian \
+          cargo test --release --all --verbose --exclude usbsas-server
+      - name: rebuild usbsas for integration tests
+        run: |
+          docker run -t -u $(id -u):$(id -g) -v $(pwd)/:/SRC  \
+          --env CARGO_HOME=/SRC/target/.cargo usbsas-builder:debian \
+          cargo build --release --all --verbose --features mock,integration-tests
+      - name: integration tests
+        run: |
+          docker run -t -u $(id -u):$(id -g) -v $(pwd)/:/SRC  \
+          --env CARGO_HOME=/SRC/target/.cargo usbsas-builder:debian \
+          cargo test --release --verbose -p usbsas-server --features integration-tests
