--- a/usbsas-analyzer-server/Cargo.toml
+++ b/usbsas-analyzer-server/Cargo.toml
@@ -8,7 +8,7 @@ license = "GPL-3.0"
 [dependencies]
 actix-files = "0.6"
 actix-web = "4.3"
-clamav-rs = { git = "https://github.com/losynix/clamav-rs", branch = "c_char_i8" }
+clamav-rs = { git = "https://github.com/losynix/clamav-rs", branch = "patches" }
 clap = "4.3"
 env_logger = "0.10"
 futures = "0.3"
