cargo-deb needs a description to build pkg

--- a/usbsas-tools/Cargo.toml
+++ b/usbsas-tools/Cargo.toml
@@ -3,6 +3,7 @@ name = "usbsas-tools"
 version = "0.1.4"
 edition = "2021"
 license = "GPL-3.0"
+description = "usbsas tools"
 
 [dependencies]
 bitvec = { version = "1.0", optional = true }
