--- a/usbsas-net/Cargo.toml
+++ b/usbsas-net/Cargo.toml
@@ -6,6 +6,7 @@ license = "GPL-3.0"
 
 [dependencies]
 base64 = { version = "0.21", optional = true }
+byteorder = "1.4"
 env_logger = "0.10"
 libgssapi = { version = "0.6", optional = true }
 log = "0.4"
