--- a/usbsas-process/Cargo.toml
+++ b/usbsas-process/Cargo.toml
@@ -7,7 +7,7 @@ license = "GPL-3.0"
 [dependencies]
 libc = "0.2"
 log = "0.4"
-nix = "0.27"
+nix = { version = "0.27", features = ["fs", "process"] }
 thiserror = "1.0"
 usbsas-comm = { path = "../usbsas-comm" }
 usbsas-utils = { path = "../usbsas-utils" }
