--- a/usbsas-server/Cargo.toml
+++ b/usbsas-server/Cargo.toml
@@ -15,7 +15,7 @@ futures = "0.3"
 hmac = { version = "0.12", features = ["reset"] }
 log = "0.4"
 mac_address = "1.1"
-nix = "0.27"
+nix = { version = "0.27", features = ["process", "signal"] }
 rand = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
