--- a/usbsas-analyzer-server/Cargo.toml
+++ b/usbsas-analyzer-server/Cargo.toml
@@ -1,14 +1,13 @@
 [package]
 name = "usbsas-analyzer-server"
 description = "usbsas analyzer server (with clamav)"
-version = "0.1.4"
+version = "0.2.0"
 edition = "2021"
 license = "GPL-3.0"
 
 [dependencies]
 actix-files = "0.6"
 actix-web = "4.4"
-clamav-rs = { git = "https://github.com/losynix/clamav-rs", branch = "patches" }
 clap = "4.4"
 env_logger = "0.10"
 futures = "0.3"
@@ -26,7 +25,7 @@ integration-tests = []
 [package.metadata.deb]
 maintainer = "usbsas"
 copyright = "usbsas"
-depends = "$auto, usbsas-server, clamav-freshclam"
+depends = "$auto, clamav-daemon, clamav-freshclam"
 section = "utility"
 priority = "optional"
 maintainer-scripts = "debian/"
